[metadata]
name = neurox
version = 1.0.9
author = Fahim Dalvi
author_email = faimaduddin@hbku.edu.qa
description = Toolkit for Neuron Analysis in Deep NLP Models
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fdalvi/NeuroX
project_urls =
    Documentation = https://neurox.qcri.org/docs/
    Bug Tracker = https://github.com/fdalvi/NeuroX/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
packages = find:
package_dir = 
    =.
install_requires =
    h5py==3.8.0
    imbalanced-learn==0.8
    matplotlib==3.7.1
    numpy==1.24.3
    scikit-learn==1.2.2
    scipy==1.10.1
    seaborn==0.11.1
    svgwrite==1.4.1
    tokenizers==0.13.3
    torch==2.0.1
    tqdm==4.65.0
    transformers==4.29.2
python_requires = >=3.6

[options.extras_require]
dev =
    build==0.7.0
    pytest==7.0.1
    pytest-cov==3.0.0
    sphinx==4.4.0
    sphinx-book-theme==0.2.0
    ufmt==1.3.2

[options.packages.find]
where = .
exclude = tests*
